<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:backgroundTint="@color/cardview_shadow_start_color"
    android:backgroundTintMode="src_over">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:shadowColor="@color/colorBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="15"
            android:textStyle="bold"
            android:text="@string/info_categories"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_border"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/category1_view"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:text="@string/category1View"
                android:textColor="#ffffff"
                android:shadowColor="@color/colorBlack"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="15"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/category1_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_border"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/category2_view"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:text="@string/category2View"
                android:textColor="#ffffff"
                android:shadowColor="@color/colorBlack"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="15"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/category2_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_border"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/category3_view"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:text="@string/category3View"
                android:textColor="#ffffff"
                android:shadowColor="@color/colorBlack"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="15"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/category3_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_border"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/category4_view"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:text="@string/category4View"
                android:textColor="#ffffff"
                android:shadowColor="@color/colorBlack"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="15"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/category4_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_border"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/category5_view"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:text="@string/category5View"
                android:textColor="#ffffff"
                android:shadowColor="@color/colorBlack"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="15"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/category5_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_classic"
            android:onClick="next"
            android:text="@string/nextBtn"
            android:textColor="@android:color/background_dark" />

    </LinearLayout>

</ScrollView>