<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:backgroundTint="@color/cardview_shadow_start_color"
    android:backgroundTintMode="src_over"
    android:layout_centerInParent="true">

    <TextView
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:text="Large Text"
        android:textColor="#ffffff"
        android:shadowColor="@color/colorBlack"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="15"
        android:textSize="15sp"
        android:padding="40dp"
        android:textStyle="bold"
        android:background="@drawable/layout_border"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/PlayAgainBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_classic"
            android:onClick="playagain"
            android:padding="10dp"
            android:text="@string/playagainBtnTxt"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/cardview_dark_background" />

        <Button
            android:id="@+id/highScoresBtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_classic"
            android:onClick="highScoresFromResultActivity"
            android:padding="5dp"
            android:text="@string/highScoresBtnTxt"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/cardview_dark_background" />

    </LinearLayout>

    <Button
        android:id="@+id/MainMenuBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_rounded_corners"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="mainMenu"
        android:padding="10dp"
        android:text="@string/mainMenuBtnTxt"
        android:textAppearance="@style/TextAppearance.AppCompat" />

</LinearLayout>